Fix logo alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@ padding-bottom: 24px;
 }
 .site-logo {
     margin: 0;
-    margin-top: 100px;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     margin-right: 76px;
